[gd_scene load_steps=13 format=3 uid="uid://dg66a1qv4k4w5"]

[ext_resource type="Script" path="res://menus/menu.gd" id="1_f0tcb"]
[ext_resource type="Texture2D" uid="uid://butlwk7s6ceod" path="res://resources/background/png/1920x1080/All/Sky.png" id="2_qgsuy"]
[ext_resource type="Texture2D" uid="uid://bfupfvpjp3fot" path="res://resources/background/png/1920x1080/All/Hills_1.png" id="3_otdmi"]
[ext_resource type="Texture2D" uid="uid://biairwunmhjdr" path="res://resources/quantumbanner.png" id="4_5vpjv"]
[ext_resource type="Texture2D" uid="uid://bwutrdlonp0jd" path="res://resources/background/png/Clouds/512x512/Cloud_1.png" id="5_btruu"]
[ext_resource type="PackedScene" uid="uid://bdspqpvxhy1ju" path="res://resources/Player/Player.tscn" id="6_o8opw"]
[ext_resource type="Texture2D" uid="uid://0kk8n2bu6nss" path="res://resources/Tiles/png/128x128/Grass.png" id="7_ap3pb"]
[ext_resource type="AudioStream" uid="uid://mqxg52obl6ox" path="res://resources/Sounds/happy-14585.mp3" id="8_doi5o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6lx0h"]
bg_color = Color(0.972549, 0.6, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j76mn"]
bg_color = Color(0.972549, 0.6, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d38iw"]
bg_color = Color(0.972549, 0.6, 0.258824, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmq1d"]
size = Vector2(200, 40)

[node name="Menu" type="Node2D"]
script = ExtResource("1_f0tcb")

[node name="Sky" type="Sprite2D" parent="."]
position = Vector2(609, 361)
texture = ExtResource("2_qgsuy")

[node name="Hills1" type="Sprite2D" parent="."]
position = Vector2(608, 137)
texture = ExtResource("3_otdmi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/separation = 2
alignment = 1

[node name="Header" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Quantumbanner" type="Sprite2D" parent="VBoxContainer/Header"]
position = Vector2(578, 118)
scale = Vector2(0.215909, 0.214286)
texture = ExtResource("4_5vpjv")

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftMargin" type="HBoxContainer" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MiddleBox" type="VBoxContainer" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Level1" type="Button" parent="VBoxContainer/ButtonContainer/MiddleBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_6lx0h")
text = "Level 1 : Get out of Qubitropolis"

[node name="Level2" type="Button" parent="VBoxContainer/ButtonContainer/MiddleBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_j76mn")
text = "Level 2 : The oracle of Qubit Peaks"

[node name="Instruction" type="Button" parent="VBoxContainer/ButtonContainer/MiddleBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_j76mn")
text = "Instruction"

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonContainer/MiddleBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_d38iw")
text = "Quit"

[node name="RightMargin" type="HBoxContainer" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Footer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Cloud1" type="Sprite2D" parent="."]
position = Vector2(135, 113)
scale = Vector2(0.382813, 0.216797)
texture = ExtResource("5_btruu")

[node name="Cloud2" type="Sprite2D" parent="."]
position = Vector2(964, 263)
scale = Vector2(0.382813, 0.216797)
texture = ExtResource("5_btruu")

[node name="Player" parent="." instance=ExtResource("6_o8opw")]
position = Vector2(168, 319)
collision_mask = 5

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2(585, 594)

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(-414, -233)
shape = SubResource("RectangleShape2D_wmq1d")

[node name="Sprite2D" type="Sprite2D" parent="floor"]
position = Vector2(-411, -234)
scale = Vector2(1.60938, 0.31543)
texture = ExtResource("7_ap3pb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_doi5o")
volume_db = -14.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/ButtonContainer/MiddleBox/Level1" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/MiddleBox/Level2" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/MiddleBox/Instruction" to="." method="_on_instruction_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/MiddleBox/QuitButton" to="." method="_on_quit_button_pressed"]
